added a lot of work from a few days

--- a/8-19/full-stack-exercise/src/main/webapp/WEB-INF/web.xml
+++ b/8-19/full-stack-exercise/src/main/webapp/WEB-INF/web.xml
@@ -61,5 +61,15 @@
 		<servlet-name>delete_user</servlet-name>
 		<url-pattern>/delete_user</url-pattern>	
 	</servlet-mapping>
+	
+		<servlet>
+		<servlet-name>list_user</servlet-name>
+		<servlet-class>com.anthony.ListUserServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>list_user</servlet-name>
+		<url-pattern>/list_user</url-pattern>	
+	</servlet-mapping>
 
 </web-app>
